[package]
name = "rusty-tools"
version = "0.1.0"
edition = "2021"
authors = ["Antonio Rodriguez Martinez <antoniorodriguez@example.com>"]
description = "CLI toolset for BlueSky automation in Rust"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
rusqlite = { version = "0.31", features = ["chrono"] }
chrono = "0.4"
directories = "5.0"
dotenvy = "0.15"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
