[package]
name = "bsky-rusty-tools"
version = "0.1.0"
edition = "2025"
authors = ["Antonio Rodriguez Martinez <antonio@builds.software>"]
description = "CLI toolset for BlueSky automation in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/antoniwan/bsky-rusty-tools"

[dependencies]
# HTTP and API
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and async
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# Database
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

# Utilities
directories = "5.0"
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
rpassword = "7.2"
once_cell = "1.19"

[build-dependencies]
